# marketminds

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: velocity.md
docs/adr/: 0001-tech-stack.md  0002-no-database-v1.md  0003-streamlit-cloud-deployment.md  0004-fastapi-not-live.md
src/marketminds/: __init__.py
src/marketminds/data/: __init__.py  prices.py
tests/: test_smoke.py
tests/unit/: test_prices.py
